--- a/.github/workflows/test-dftd3-src.yml
+++ b/.github/workflows/test-dftd3-src.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           cd dftd3-src
           export DFTD3_SRC_DEV=1
-          cargo test -vv --features="build_from_source static"
+          cargo test --test "*" -vv --features="build_from_source static" -- --nocapture
   
   build-dynamic:
     runs-on: ubuntu-latest
@@ -24,7 +24,7 @@ jobs:
       - name: run tests directly
         run: |
           cd dftd3-src
-          cargo test -vv --features="build_from_source"
+          cargo test --test "*" -vv --features="build_from_source" -- --nocapture
     
   external-static:
     runs-on: ubuntu-latest
@@ -38,7 +38,7 @@ jobs:
           ls /usr/share/miniconda/lib
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/share/miniconda/lib
           export DFTD3_SRC_DEV=1
-          cargo test -vv --features="static"
+          cargo test --test "*" -vv --features="static" -- --nocapture
   
   external-dynamic:
     runs-on: ubuntu-latest
@@ -51,4 +51,4 @@ jobs:
           conda install dftd3-python -c conda-forge
           ls /usr/share/miniconda/lib
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/share/miniconda/lib
-          cargo test -vv
+          cargo test --test "*" -vv -- --nocapture
