--- a/dftd3/Cargo.toml
+++ b/dftd3/Cargo.toml
@@ -23,7 +23,7 @@ approx = { version = "0.5" }
 gcp = []
 
 [package.metadata.docs.rs]
-cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "--document-private-items"]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
 all-features = true
 
 [[example]]
